apps/tailscale/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-tailscale
  namespace: monitoring
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: http
      port: 80
      targetPort: 9093
  selector:
    app.kubernetes.io/name: alertmanager
    alertmanager: monitoring-kube-prometheus-alertmanager
